# proffastpylot

./: .gitignore  FolderStructure.txt  LICENCE  Logfile.txt  Notes_Benedikt.txt  README.md  input.yml  input_sodankyla_example.yml  paper.bib  paper.md  pyproject.toml  run.py  setup.py
.github/workflows/: build-docs.yml  docs-build.yml  test-linux.yml  test-windows.yml  test.yml
GeomsGenerationDev/: GeomsHelperClass.py  MyGEOMScreator.py  input_sodankyla_GEOMS_Extention.yml
__OldPythonScripts__/: 01_create-preprocess-input-file.py  02_move-bin-files-analysis-directory.py  03_search-create-pt-map-files.py  04_pcx-inv-input-files-and-process.py  04_pcx-inv-parallel-processing.py  05_merge-invparms-files.py  CocconCSVtoGEOMS.py  CocconCSVtoHDF.py  CocconClass.py  CocconDef.py  CocconHDFtoGEOMS.py
data/: ILSList.csv  ReadInputFile.py  coords.csv
data/SN039/: coords.csv
data/sn039/: CoordFile.txt
docs/: 1-1_installation.md  1-2_usage.md  1-3_pressure_input.md  1-4_folder_structure.md  2-1_all_input_parameters.md  2-2_time_offsets.md  2-3_ils_parameters.md  2-4_instrument_parameters.md  2-4_preprocess_settings.md  2-4_troubleshooting.md  2-5_logging.md  2-6_troubleshooting.md  3-1_contribution_notes.md  3-2_developer_guide.md  README.md  conf.py  folder_structure.md  index.rst  input_parameter_list.md  installation.md  modules.rst  pressure_input.md  time_offsets.md  troubleshooting.md  usage.md
example/: Reference_Output_Example_Sodankyla.csv  example_auxiliary.py  example_hdf_geoms.py  example_nc_cf.py  hdf_geoms_calibration_parameters.csv  input_sodankyla_example.yml  input_sodankyla_geomsgen.yml  input_sodankyla_hdf5extensiontest.yml  input_sodankyla_hdf_geoms.yml  log_type_pressure.yml  mira_coord_parameters.yml  pressure_type_tsukuba.yml  proffastpylot_parameters_tsukuba.yml  run.py  run_geomsgen.py  run_heidelberg_mobile.py  run_tsukuba.py  test_pressure.py  utils.py
example/config/: Reference_Output_Example_Sodankyla.csv  input_sodankyla_example.yml  japan_coord_parameters.yml  vaisala_pressure_parameters.yml
example/input_data/: coords.csv
examples/: example_auxiliary_usage.py  example_hdf_geoms_generation.py  example_nc_cf.py  example_netcdf_generation.py  run.py  run_heidelberg_mobile_retrieval.py  run_sodankyla_retrieval.py  run_tsukuba_retrieval.py
examples/config/: input_sodankyla_hdf_geoms.yml  proffastpylot_parameters_tsukuba.yml
prf/templates/: template_invers10.inp  template_pcxs10.inp  template_preprocess4.inp
prfpylot/: ILSList.csv  __init__.py  auxiliary.py  constants.py  create_inputfile.py  download_example.py  filemover.py  prepare.py  pressure.py  prfpylot.py  pylot.py
prfpylot/cf_gen/: nc_output.py
prfpylot/geoms_gen/: calibration_parameters.csv  helper.py  writer.py
prfpylot/nc_cf/: nc_cf_writer.py  variable_attrs.yml
templates/: template_pT_intraday.inp  template_pcxs10.inp  template_preprocess4.inp
tests/: test_dependencies.py  test_examples.py  test_version_numbers.py
(+179 files in other folders)
