[project]
name = "PROFFASTpylot"
version = "2.4.1-3"
description = "Run PROFFAST with Python"
authors = [
    { name = "Benedikt Herkommer" },
    { name = "Lena Feld" },
    { name = "Darko Dubravica", email = "darko.dubravica@kit.edu" },
    { name = "Moritz Oliveira Makowski", email = "moritz.makowski@tum.de" },
]
dependencies = []
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "GPLv3" }

[tool.pdm]
distribution = false
