[project]
name = "PROFFASTpylot"
version = "2.4.1-3"
description = "Run PROFFAST with Python"
authors = [
    { name = "Benedikt Herkommer" },
    { name = "Lena Feld" },
    { name = "Darko Dubravica", email = "darko.dubravica@kit.edu" },
    { name = "Moritz Oliveira Makowski", email = "moritz.makowski@tum.de" },
]
dependencies = [
    "cftime==1.6.5",
    "fortranformat==2.0.3",
    "h5py==3.15.1",
    "netCDF4==1.7.4",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scipy==1.17.0",
    "timezonefinder==8.2.1",
    "tqdm==4.67.1",
    "xarray==2025.12.0",
]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = { text = "GPLv3" }

[project.optional-dependencies]
dev = ["sphinx>=9.0.4", "sphinx-mdinclude>=0.6.2"]
[tool.pdm]
distribution = false
