[project]
name = "PROFFASTpylot"
version = "2.4.1-3"
description = "Run PROFFAST with Python"
authors = [
    { name = "Benedikt Herkommer" },
    { name = "Lena Feld" },
    { name = "Darko Dubravica", email = "darko.dubravica@kit.edu" },
    { name = "Moritz Oliveira Makowski", email = "moritz.makowski@tum.de" },
]
dependencies = [
    "cftime==1.6.5",
    "fortranformat==2.0.3",
    "h5py==3.15.1",
    "netCDF4==1.7.4",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scipy==1.17.0",
    "timezonefinder==8.2.1",
    "tqdm==4.67.1",
    "xarray==2025.12.0",
    "pytest-order>=1.3.0",
]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
repository = "https://github.com/coccon/proffastpylot"
documentation = "https://www.coccon.kit.edu/70.php"

[project.optional-dependencies]
dev = [
    "sphinx>=9.0.4",
    "sphinx-mdinclude>=0.6.2",
    "tomli>=2.4.0",
    "ruff>=0.14.13",
    "pytest>=9.0.2",
]

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--exitfirst --verbose --durations=0 --no-header"
